Minor fixing to media query on mobile for margin to Google Map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,7 @@ h2, #site-info b {
 
     .content-default {
         height: 75em;
-        margin: 0;
+        margin-top: 50px;
     }
 
    .modal-default {
